--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <section class="test-section">
             <div class="block primary-block">
                 <h2>Создание опроса</h2>
+                <div><hr></div>
                 <button class="clear-btn">Очистить</button>
                 <div class="labelsContainer">
                     <label><span class="label-text">Название опроса</span><br><input type="text" id="surveyTitle" oninput="updateJSONDisplay()"></label>
